--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -737,7 +737,7 @@
             <ul class="navbar-menu">
                 <li><a href="/" class="navbar-link">Projects</a></li>
                 <li><a href="/my-projects.html" class="navbar-link">My Projects</a></li>
-                <li><a href="/student-progress.html" class="navbar-link" style="display: none;">Student Progress</a>
+                <li><a href="/child-progress.html" class="navbar-link" style="display: none;">Student Progress</a>
                 </li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link active">Leaders</a></li>
