--- a/public/project.html
+++ b/public/project.html
@@ -43,7 +43,7 @@
 
             <ul class="navbar-menu" id="mobileMenu">
                 <li><a href="/" class="navbar-link active">Projects</a></li>
-                <li><a href="/student-progress.html" class="navbar-link">Student Progress</a></li>
+                <li><a href="/child-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
                 <li><a href="/instructor-dashboard.html" class="navbar-link">Teacher Panel</a></li>
